# libcratesio-rs

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
src/: api.rs  errors.rs  krate.rs  lib.rs
tests/: crate.rs
