[package]
name = "libcratesio"
version = "0.0.0"
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
description = "Library for accessing crates.io API"
license = "Apache-2.0/MIT"
homepage = "https://gitlab.com/imp/libcratesio-rs"
repository = "https://gitlab.com/imp/libcratesio-rs.git"
documentation = "https://docs.rs/libcratesio"
readme = "README.md"
categories = ["development-tools"]
keywords = ["crates.io", "api"]

[dependencies]
error-chain = "0.10"
reqwest = "0.4"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dependencies.chrono]
features = ["serde"]
version = "0.3"
