[package]
name = "libcratesio"
version = "0.0.8"
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
description = "Library for accessing crates.io API"
license = "Apache-2.0/MIT"
homepage = "https://gitlab.com/imp/libcratesio-rs"
repository = "https://gitlab.com/imp/libcratesio-rs.git"
documentation = "https://docs.rs/libcratesio"
readme = "README.md"
categories = ["development-tools"]
keywords = ["cratesio", "api"]

[badges]
travis-ci = { repository = "imp/libcratesio-rs" }
git-lab = { repository = "imp/libcratesio-rs" }

[dependencies]
error-chain = "0.10"
reqwest = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4"
